# sml-security

./: LICENSE  README.md  cookiecutter.json
tests/: conftest.py  test_creation.py
{{ cookiecutter.repo_name }}/: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
{{ cookiecutter.repo_name }}/docs/: conf.py
{{ cookiecutter.repo_name }}/docs/examples/: model-settings.json
{{ cookiecutter.repo_name }}/tests/: test_runtime.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/: __init__.py  codecs.py  common.py  runtime.py
