[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "A short description of the project."
authors = [{name = "{{ cookiecutter.repo_user }}"}]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "mlserver>=1.6.1"
]

[dependency-groups]
dev = [
    "Sphinx>=3.2.1",
    "coverage>=4.5.4",
    "flake8>=3.9.0",
    # Security
    "safety>=1.10.3",
    "piprot>=0.9.11",
    "bandit>=1.7.4",
]
